--- a/Application/iSynaptic.Commons/FuncExtensions.tt
+++ b/Application/iSynaptic.Commons/FuncExtensions.tt
@@ -78,15 +78,7 @@ namespace iSynaptic.Commons
             };
         }
 
-		public static Func<<#= typeArgs #>, Maybe<TResult>> PrecededBy<<#= typeArgs #>, TResult>(this Func<<#= typeArgs #>, Maybe<TResult>> self, Func<<#= typeArgs #>, Maybe<TResult>> precededBy)
-        {
-            if (self == null || precededBy == null)
-                return self ?? precededBy;
-
-            return (<#= args #>) => precededBy(<#= args #>).Or(self(<#= args #>));
-        }
-
-        public static Func<<#= typeArgs #>, Maybe<TResult>> FollowedBy<<#= typeArgs #>, TResult>(this Func<<#= typeArgs #>, Maybe<TResult>> self, Func<<#= typeArgs #>, Maybe<TResult>> followedBy)
+        public static Func<<#= typeArgs #>, Maybe<TResult>> Or<<#= typeArgs #>, TResult>(this Func<<#= typeArgs #>, Maybe<TResult>> self, Func<<#= typeArgs #>, Maybe<TResult>> followedBy)
         {
             if (self == null || followedBy == null)
                 return self ?? followedBy;
